Added Portfolio for Mel

--- a/docs/team/Melvin-leo.adoc
+++ b/docs/team/Melvin-leo.adoc
@@ -1,50 +1,95 @@
-= John Doe - Project Portfolio
+= Melvin Leo - Project Portfolio
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== Project: AddressBook - Level 4
-AddressBook - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
+== Project: ScheduBook
+_ScheduBook_ is a desktop address book application that can be used by students or businessmen to better manage their schedules with their peers or acquaintances. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java and currently has about 9 kLoC. +
+ +
+This project is a product of Software Engineering, CS2103T in NUS. _ScheduBook_ is proudly developed by my team based on https://github.com/se-edu/addressbook-level4[AddressBook(Level4)], by https://se-edu.github.io/[SE-EDU] team, initial address book application created to be used for teaching Software Engineering principles.
 
-*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] {give links to collated code files}
+*Code contributed*: [https://github.com/CS2103AUG2017-T09-B2/main/blob/master/collated/main/Melvin-leo.md[Functional code]] [https://github.com/CS2103AUG2017-T09-B2/main/blob/master/collated/test/Melvin-leo.md[Test code]]
 
-=== Enhancement Added: Undo/Redo
+=== Enhancement Added: Meeting Class
 
 ==== External behavior
 
 ---
-#Start of Extract [from: User Guide]#
 
-include::../UserGuide.adoc[tag=undoredo]
 
-#End of Extract#
+include::../UserGuide.adoc[tag=meetingCard]
+
 
 ---
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+For the ease of the user, the meeting cards are positioned and presented in such a way that the user can retrieve the information he/she wants immediately without much effort. Furthermore, the colours are also implemented for the user to keep track of his/her upcoming meetings. The name and the phone number of the person who the user will be meeting are shown so that if needed, the user can contact that person with ease.
 
 ==== Implementation
 
 ---
-#Start of Extract [from: Developer Guide]#
 
-include::../DeveloperGuide.adoc[tag=undoredo]
+include::../DeveloperGuide.adoc[tag=meetingClass]
 
-#End of Extract#
+include::../DeveloperGuide.adoc[tag=meetingCard]
 
 ---
 
-=== Enhancement Proposed: Add command `remark`
+=== Enhancement Added: Reminder Pop up
 
-{Explain similar to the Undo/Redo feature above.}
+==== External behavior
+
+---
+
+
+include::../UserGuide.adoc[tag=popUp]
+
+
+---
+
+==== Justification
+
+This implementation further boost our capability of reminding of _ScheduBook_. After implementing the meeting cards, we realised that despite the coloured card, there were no significant reminder that can really catch the eye of the users. However, this pop up reminder is significant to a large extent and most of the details are shown to the user. Furthermore, the user will have to acknowledge the pop up before actually entering the application.
+
+==== Implementation
+
+---
+
+include::../DeveloperGuide.adoc[tag=meetingPopup]
+
+
+---
+
+=== Enhancement Added: Automatic deletion of past meetings
+
+==== External behavior
+
+---
+
+
+include::../UserGuide.adoc[tag=autodelete]
+
+
+---
+
+==== Justification
+
+In order for _ScheduBook_ to be more user-friendly and convenient, automatic deletion of meetings that have past the scheduled date and time should be implemented, since there is no need for the application to remind user of an overdue meeting.
+
+==== Implementation
+
+---
+
+include::../DeveloperGuide.adoc[tag=autoDelete]
+
+
+---
+
+=== Enhancement Proposed: Search command by tags
 
 === Other contributions
 
-* Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
-* Wrote additional tests to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
 
-== Project: PowerPointLabs
 
-{Optionally (not graded), you may include other projects in your portfolio.}
+== Project: FPGA audio Fx (Verilog programming for EE2020 in NUS)
