--- a/docs/team/azizi.adoc
+++ b/docs/team/azizi.adoc
@@ -68,13 +68,18 @@ include::../DeveloperGuide.adoc[tag=add]
 #End of Extract#
 
 ---
+
+////
 === Enhancement Proposed: Add command `remark`
 
 {Explain similar to the Undo/Redo feature above.}
+////
+
 
 === Other contributions
 
-* Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
-* Wrote additional tests to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
+* Added colors for persons' tags (Pull request https://github.com/CS2103AUG2017-T15-B4/main/pull/184[#184])
 
 == Project: External
+
+
