--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -153,6 +153,7 @@ Favourites/Unfavourites the 1st person from the results of the `find` command.
 
 *Suggestion for use:* You want to easily access a particular contact.
 
+// tag::find[]
 ==== Finding persons : `find`
 
 *Description:* Finds persons whose specified _field_ contain any of the given keywords.
@@ -194,6 +195,8 @@ Returns any person having names containing `Betsy`, `Tim`, or `John`
 Returns any person having tags `friends`, `colleagues`, or both.
 
 *Suggestion for use:* If you can only remember a contact's address and wants to find the contact in the contact list.
+
+// end::find[]
 
 ==== Deleting a person : `delete`
 
@@ -341,6 +344,8 @@ The second `redo` command reverses the first `undo` command and re-execute the `
 
 // end::undoredo[]
 
+// tag::addremove[]
+// tag::addtag[]
 ==== Adding tag(s) : `addtag`
 
 *Description:* Adds the specified tag(s).
@@ -379,6 +384,7 @@ Adds the `friends` tag to the person from the second to fifth index in the conta
 
 // end::addtag[]
 
+// tag::removetag[]
 ==== Removing tag(s) : `removetag`
 
 *Description:* Removes the specified tag(s).
@@ -424,6 +430,7 @@ Removes the `friends` tag from the second to fifth person in the contact list.
 *Suggestion for use:* If you want to mass delete a tag that is no longer in use.
 
 // end::removetag[]
+// end::addremove[]
 
 ==== Add/remove a remark note to contact: `addremark`, `removeremark`
 
