--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -30,7 +30,7 @@ Responsibilities: Storage, UI
 
 == Risa Shindo
 image::risashindo.jpg[width="150", align="left"]
-{empty}[https://github.com/risashindo7[github]][<<risashindo7#, portfolio>>]
+{empty}[https://github.com/risashindo7[github]][<<risashindo#, portfolio>>]
 
 Role: Developer
 Responsibilities: Logic
