--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -415,6 +415,7 @@ Format: `sortPriority`
 
 // end::sort[]
 
+// tag::retrievetaguntagretag[]
 === Retrieving all persons having an existing tag : `retrieve`
 
 Lists all contacts having a certain existing tag in the Gentleman's Guide. +
@@ -504,6 +505,7 @@ Examples:
 
 * `retag enemies friends` +
 Renames the existing "enemies" tag in the Gentleman's Guide to "friends".
+// end::retrievetaguntagretag[]
 
 === Listing entered commands : `history`
 
