--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -117,15 +117,19 @@ Examples:
 Shows a list of all persons in the address book. +
 Format: `list`
 
+// tag::blacklist[]
 === Listing all blacklisted persons : `blacklist`
 
 Shows a list of all blacklisted persons in the address book. +
 Format: `blacklist`
+// end::blacklist[]
 
+// tag::whitelist[]
 === Listing all whitelisted persons : `whitelist`
 
 Shows a list of all whitelisted persons in the address book. +
 Format: `whitelist`
+// end::whitelist[]
 
 === Editing a person : `edit`
 
@@ -222,6 +226,7 @@ Decreases the debt of the 2nd person by $1000.10.
 Decreases the debt of the 3rd person by $234.
 // end::payback[]
 
+// tag::repaid[]
 === Resetting the debt of a person: `repaid`
 
 Resets the debt of a person to zero and sets the date repaid field of that person. +
@@ -239,6 +244,7 @@ Resets the debt of the 1st person to zero and sets the date of repayment in his/
 * `select 2` +
 `repaid` +
 Resets the debt of the 2nd person to zero and sets the date of repayment in his/her record.
+// tag::repaid[]
 
 === Deleting a person : `delete`
 
